# cmd/server/handler/dentists/dentists.go
@@ -20,10 +20,16 @@ func NewControllerDentists(service dentists.Service) *Controller {
 
 // Method HandlerCreate is the handler needed to POST a dentist
 // Dentists godoc
-// @Summary Create a Dentist
+// @Summary Create a Dentist 
 // @Tags Dentists
 // @Accept json
 // @Produce json
+// @Param dentistRequest body models.Dentist true "Dentist details"
+// @Security ApiKeyAuth
+// @Success 200 {object} web.response "Dentist created"
+// @Failure 400 {object} web.errorResponse "Bad request"
+// @Failure 401 {object} web.errorResponse "Unauthorized: Invalid or missing API key"
+// @Failure 500 {object} web.errorResponse "Internal server error"
 // @Router /dentists [post]
 func (c *Controller) HandlerCreate() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
@@ -34,25 +40,27 @@ func (c *Controller) HandlerCreate() gin.HandlerFunc {
 
 		if err != nil {
 			web.Error(ctx, http.StatusBadRequest, "Bad request: %v", err)
-			ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-				"message": "bad request",
-				"error":   err,
-			})
+			// ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
+			// 	"message": "bad request",
+			// 	"error":   err,
+			// })
 			return
 		}
 
 		dentist, err := c.service.Create(ctx, dentistRequest)
 		if err != nil {
-			ctx.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-				"message": "Internal server error",
-			})
+			web.Error(ctx, http.StatusInternalServerError, "Internal server error")
+			// ctx.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
+			// 	"message": "Internal server error",
+			// })
 			return
 		}
 
-		ctx.JSON(http.StatusOK, gin.H{
-			"data":    dentist,
-			"message": "Dentist created",
-		})
+		web.Success(ctx, http.StatusOK, dentist, "Dentist created")
+		// ctx.JSON(http.StatusOK, gin.H{
+		// 	"data":    dentist,
+		// 	"message": "Dentist created",
+		// })
 
 	}
 }
@@ -63,6 +71,10 @@ func (c *Controller) HandlerCreate() gin.HandlerFunc {
 // @Tags Dentists
 // @Accept json
 // @Produce json
+// @Param id path int true "Patient ID" Format(int64) Example(1) // The ID of the patient to retrieve
+// @Success 200 {object} web.response "Dentist found"
+// @Failure 400 {object} web.errorResponse "Bad request"
+// @Failure 500 {object} web.errorResponse "Internal server error"
 // @Router /dentists/{id} [get]
 func (c *Controller) HandlerGetByID() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
@@ -73,26 +85,29 @@ func (c *Controller) HandlerGetByID() gin.HandlerFunc {
 		// Convert the string parameter to a int
 		id, err := strconv.Atoi(idParam)
 		if err != nil {
-			ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-				"message": "bad request",
-				"error":   err,
-			})
+			web.Error(ctx, http.StatusBadRequest, "Bad request: %v", err)
+			// ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
+			// 	"message": "bad request",
+			// 	"error":   err,
+			// })
 			return
 		}
 
 		// Call the service to get by id
 		dentist, err := c.service.GetByID(ctx, id)
 		if err != nil {
-			ctx.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-				"message": "Internal server error",
-			})
+			web.Error(ctx, http.StatusInternalServerError, "Internal server error")
+			// ctx.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
+			// 	"message": "Internal server error",
+			// })
 			return
 		}
 
-		ctx.JSON(http.StatusOK, gin.H{
-			"data":    dentist,
-			"message": "Dentist found",
-		})
+		web.Success(ctx, http.StatusOK, dentist, "Dentist found")
+		// ctx.JSON(http.StatusOK, gin.H{
+		// 	"data":    dentist,
+		// 	"message": "Dentist found",
+		// })
 	}
 }
 
@@ -102,6 +117,12 @@ func (c *Controller) HandlerGetByID() gin.HandlerFunc {
 // @Tags Dentists
 // @Accept json
 // @Produce json
+// @Param id path int true "Patient ID" Format(int64) Example(1) // The ID of the patient to retrieve
+// @Security ApiKeyAuth
+// @Success 200 {object} web.response "Dentist updated"
+// @Failure 400 {object} web.errorResponse "Bad request"
+// @Failure 401 {object} web.errorResponse "Unauthorized: Invalid or missing API key"
+// @Failure 500 {object} web.errorResponse "Internal server error"
 // @Router /dentists/{id} [put]
 func (c *Controller) HandlerUpdate() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
@@ -114,34 +135,38 @@ func (c *Controller) HandlerUpdate() gin.HandlerFunc {
 		// Convert the string parameter to a int
 		id, err := strconv.Atoi(idParam)
 		if err != nil {
-			ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-				"message": "bad request",
-				"error":   err,
-			})
+			web.Error(ctx, http.StatusBadRequest, "bad request: %v", err)
+			// ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
+			// 	"message": "bad request",
+			// 	"error":   err,
+			// })
 			return
 		}
 
 		if err := ctx.Bind(&dentistRequest); err != nil {
-			ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-				"message": "Bad request",
-				"error":   err.Error(),
-			})
+			web.Error(ctx, http.StatusBadRequest, "Bad request: %v", err.Error())
+			// ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
+			// 	"message": "Bad request",
+			// 	"error":   err.Error(),
+			// })
 			return
 		}
 
 		// Call the service to update
 		updatedDentist, err := c.service.Update(ctx, dentistRequest, id)
 		if err != nil {
-			ctx.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-				"message": "Internal server error",
-			})
+			web.Error(ctx, http.StatusInternalServerError, "Internal server error")
+			// ctx.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
+			// 	"message": "Internal server error",
+			// })
 			return
 		}
 
-		ctx.JSON(http.StatusOK, gin.H{
-			"data":    updatedDentist,
-			"message": "Dentist updated",
-		})
+		web.Success(ctx, http.StatusOK, updatedDentist, "Dentist updated")
+		// ctx.JSON(http.StatusOK, gin.H{
+		// 	"data":    updatedDentist,
+		// 	"message": "Dentist updated",
+		// })
 	}
 }
 
@@ -151,6 +176,12 @@ func (c *Controller) HandlerUpdate() gin.HandlerFunc {
 // @Tags Dentists
 // @Accept json
 // @Produce json
+// @Security ApiKeyAuth
+// @Param id path int true "Patient ID" Format(int64) Example(1) // The ID of the patient to retrieve
+// @Success 200 {object} web.response "Dentist partially updated"
+// @Failure 400 {object} web.errorResponse "Bad request"
+// @Failure 401 {object} web.errorResponse "Unauthorized: Invalid or missing API key"
+// @Failure 500 {object} web.errorResponse "Internal server error"
 // @Router /dentists/{id} [patch]
 func (c *Controller) HandlerPatch() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
@@ -161,35 +192,39 @@ func (c *Controller) HandlerPatch() gin.HandlerFunc {
 		// Convert the string parameter to a int
 		id, err := strconv.Atoi(idParam)
 		if err != nil {
-			ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-				"message": "bad request",
-				"error":   err,
-			})
+			web.Error(ctx, http.StatusBadRequest, "bad request: %v", err)
+			// ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
+			// 	"message": "bad request",
+			// 	"error":   err,
+			// })
 			return
 		}
 
 		var partialUpdates map[string]interface{}
 		if err := ctx.BindJSON(&partialUpdates); err != nil {
-			ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-				"message": "Bad request",
-				"error":   err.Error(),
-			})
+			web.Error(ctx, http.StatusBadRequest, "Bad request: %v", err.Error())
+			// ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
+			// 	"message": "Bad request",
+			// 	"error":   err.Error(),
+			// })
 			return
 		}
 		// Call the service to partially update
 		partiallyUpdatedDentist, err := c.service.Patch(ctx, partialUpdates, id)
 		if err != nil {
-			ctx.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-				"message": "Internal server error",
-				"error":   err.Error(),
-			})
+			web.Error(ctx, http.StatusInternalServerError, "Internal server error")
+			// ctx.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
+			// 	"message": "Internal server error",
+			// 	"error":   err.Error(),
+			// })
 			return
 		}
 
-		ctx.JSON(http.StatusOK, gin.H{
-			"data":    partiallyUpdatedDentist,
-			"message": "Dentist partially updated",
-		})
+		web.Success(ctx, http.StatusOK, partiallyUpdatedDentist, "Dentist partially updated")
+		// ctx.JSON(http.StatusOK, gin.H{
+		// 	"data":    partiallyUpdatedDentist,
+		// 	"message": "Dentist partially updated",
+		// })
 	}
 }
 
@@ -199,6 +234,12 @@ func (c *Controller) HandlerPatch() gin.HandlerFunc {
 // @Tags Dentists
 // @Accept json
 // @Produce json
+// @Param id path int true "Patient ID" Format(int64) Example(1) // The ID of the patient to retrieve
+// @Security ApiKeyAuth
+// @Success 200 {object} web.response "Dentist deleted"
+// @Failure 400 {object} web.errorResponse "Bad request"
+// @Failure 401 {object} web.errorResponse "Unauthorized: Invalid or missing API key"
+// @Failure 500 {object} web.errorResponse "Internal server error"
 // @Router /dentists/{id} [delete]
 func (c *Controller) HandlerDelete() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
@@ -209,24 +250,27 @@ func (c *Controller) HandlerDelete() gin.HandlerFunc {
 		// Convert the string parameter to a int
 		id, err := strconv.Atoi(idParam)
 		if err != nil {
-			ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-				"message": "bad request",
-				"error":   err,
-			})
+			web.Error(ctx, http.StatusBadRequest, "bad request: %v", err)
+			// ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
+			// 	"message": "bad request",
+			// 	"error":   err,
+			// })
 			return
 		}
 
 		// Call the service to delete
 		err = c.service.Delete(ctx, id)
 		if err != nil {
-			ctx.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-				"message": "Internal server error",
-			})
+			web.Error(ctx, http.StatusInternalServerError, "Internal server error")
+			// ctx.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
+			// 	"message": "Internal server error",
+			// })
 			return
 		}
 
-		ctx.JSON(http.StatusOK, gin.H{
-			"message": "Dentist deleted",
-		})
+		web.Success(ctx, http.StatusOK, id, "Dentist deleted")
+		// ctx.JSON(http.StatusOK, gin.H{
+		// 	"message": "Dentist deleted",
+		// })
 	}
 }
